Added new files and updates

--- a/exercise1.ipynb
+++ b/exercise1.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "73ce2f7d",
    "metadata": {},
    "outputs": [
@@ -167,6 +167,7 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
     "arr=np.array([12 + 3j, 2+4j,32+5j,21+2j,4+1j,67+9j,2+3j])\n",
     "sort=np.sort_complex(arr)\n",
     "print(sort)"
